# qwindowkit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
docs/: framelesshelper-related.md  tutorial.en-US.md  tutorial.zh-CN.md  visual-studio-guide.md
examples/: CMakeLists.txt
examples/accent_color/: CMakeLists.txt  main.cpp
examples/mainwindow/: CMakeLists.txt  dark-style.qss  light-style.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc
examples/qml/: CMakeLists.txt  FramelessWindow.qml  QWKButton.qml  fpscounter.cpp  fpscounter.h  main.cpp  main.qml  qml.qrc
examples/shared/: CMakeLists.txt
examples/shared/resources/: shared.qrc  window-bar.qrc
examples/shared/resources/app/: example.icns
examples/shared/widgetframe/: CMakeLists.txt  windowbar.cpp  windowbar.h  windowbar_p.h  windowbutton.cpp  windowbutton.h  windowbutton_p.h
notes-multi-titlebar-demo/: CMakeLists.txt
notes-multi-titlebar-demo/src/: captionbuttonstrip.cpp  captionbuttonstrip.h  main.cpp  mainwindow.cpp  mainwindow.h  sidebartogglebutton.cpp  sidebartogglebutton.h
share/: install.cmake
share/msbuild/: QWindowKit.props.in
share/qmake/: QWKCore.pri.in  QWKQuick.pri.in  QWKStyleSupport.pri.in  QWKWidgets.pri.in
src/: CMakeLists.txt  QWindowKitConfig.cmake.in
src/core/: CMakeLists.txt  corewindowagent.cpp  corewindowagent.h  corewindowagent_p.h  qwindowkit_linux.cpp  qwindowkit_linux.h  qwindowkit_windows.cpp  qwindowkit_windows.h  qwkcoreglobal.cpp  qwkcoreglobal.h  qwkcoreglobal_p.h  qwkglobal.cpp  qwkglobal.h  qwkglobal_p.h  windowagentbase.cpp  windowagentbase.h  windowagentbase_p.h  windowitemdelegate.cpp  windowitemdelegate.h  windowitemdelegate_p.h
src/core/contexts/: abstractwindowcontext.cpp  abstractwindowcontext_p.h  cocoawindowcontext.mm  cocoawindowcontext_p.h  linuxdesktopenvapi.cpp  linuxdesktopenvapi.h  linuxwaylandcontext.cpp  linuxwaylandcontext_p.h  linuxx11context.cpp  linuxx11context_p.h  qtwindowcontext.cpp  qtwindowcontext_p.h  win32windowcontext.cpp  win32windowcontext_p.h
src/core/handler/: abstractwindowcontext.cpp  abstractwindowcontext_p.h  qtwindowcontext.cpp  qtwindowcontext_p.h  win32windowcontext.cpp  win32windowcontext_p.h
src/core/kernel/: eventobserver.cpp  eventobserver_p.h  nativeeventfilter.cpp  nativeeventfilter.h  nativeeventfilter_p.h  sharedeventfilter.cpp  sharedeventfilter.h  sharedeventfilter_p.h  systemwindow_p.h  winidchangeeventfilter.cpp  winidchangeeventfilter_p.h
src/core/shared/: qwkwindowsextra_p.h  systemwindow_p.h  windows10borderhandler_p.h
src/core/style/: styleagent.cpp  styleagent.h  styleagent_linux.cpp  styleagent_mac.mm  styleagent_p.h  styleagent_win.cpp
src/quick/: CMakeLists.txt  quickitemdelegate.cpp  quickitemdelegate_p.h  quickwindowagent.cpp  quickwindowagent.h  quickwindowagent_mac.cpp  quickwindowagent_p.h  quickwindowagent_win.cpp  qwkquickglobal.cpp  qwkquickglobal.h
src/quick/contexts/: quickwindowcontext.cpp  quickwindowcontext_p.h
src/stylesupport/: CMakeLists.txt  qwkstylesupportglobal.h  styleagent.cpp  styleagent.h  styleagent_linux.cpp  styleagent_mac.mm  styleagent_p.h  styleagent_win.cpp
src/widgets/: CMakeLists.txt  qwkwidgetsglobal.h  widgetitemdelegate.cpp  widgetitemdelegate_p.h  widgetwindowagent.cpp  widgetwindowagent.h  widgetwindowagent_cocoa.cpp  widgetwindowagent_mac.cpp  widgetwindowagent_p.h  widgetwindowagent_win.cpp
src/widgets/contexts/: widgetwindowcontext.cpp  widgetwindowcontext_p.h
